--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,10 @@ app.*.map.json
 infra/postgres/data/
 
 # Test Output
+# Test Output
 test_output.txt
+
+# Signing Secrets
+key.properties
+**/*.jks
+*.keystore
