--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   image: ^4.7.2
   image_picker: ^1.0.7
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   build_runner: ^2.11.1
   drift_dev: ^2.31.0
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
